--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "gulp sass babel serve"
+    "start": "node server.js",
+    "dev": "gulp"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "helmet-csp": "^3.4.0",
     "node-sass-middleware": "^1.0.1"
   },
   "devDependencies": {
@@ -22,6 +25,7 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "morgan": "^1.10.0",
     "sass": "^1.37.0"
   }
