--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "gulp"
+    "dev": "set NODE_ENV=development && gulp",
+    "build": "set NODE_ENV=production && gulp"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +14,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "helmet-csp": "^3.4.0",
     "node-sass-middleware": "^1.0.1"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "browser-sync": "^2.28.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-if": "^3.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "morgan": "^1.10.0",
