--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^6.0.1",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.0.4",
     "node-sass-middleware": "^1.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
