--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "node-sass-middleware": "^1.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
