--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "browser-sync": "^2.28.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-if": "^3.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
