--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-if": "^3.0.0",
+    "gulp-nodemon": "^2.5.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "morgan": "^1.10.0",
