--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "gulp-ejs": "^5.1.0",
+    "gulp-rename": "^2.0.0",
     "helmet": "^6.0.1",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
