--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "sendinblue": "0.0.1",
+    "sib-api-v3-sdk": "^8.5.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
