--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "set NODE_ENV=development && gulp",
-    "build": "set NODE_ENV=production && gulp",
+    "dev": "gulp",
+    "build": "gulp",
     "tsc": "tsc --watch"
   },
   "keywords": [],
@@ -29,8 +29,7 @@
     "gulp-rename": "^2.0.0",
     "helmet": "^6.0.1",
     "mongodb": "^5.3.0",
-    "mongoose": "^7.0.4",
-    "node-sass-middleware": "^1.0.1",
+    "mongoose": "^8.1.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
