--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,5 +1,4 @@
 name: node.js CI
-
 on:
   push:
     branches: [master]
@@ -10,8 +9,7 @@ jobs:
     runs-on: self-hosted
     strategy:
       matrix:
-        node-version: [20.x]
-
+        node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{matrix.node-version}}
@@ -19,5 +17,10 @@ jobs:
         with:
           node-version: ${{matrix.node-version}}
       - run: |
+
           npm i
           npm run build
+          cd ..
+          pm2 stop MathGenius
+          pm2 start MathGenius
+          pm2 save
