parent f6e1d4049226b8b53ab4b4f4e4246dd1c7d10dd1 author Mark Halstead <mark.d.halstead@gmail.com> 1706388388 -0700 committer Mark Halstead <mark.d.halstead@gmail.com> 1706654802 -0700
feat:add gha

Update dockerbuildanddeploy.yml

Feat:compose update

Update docker-compose.yml

Update docker-compose.yml

Update dockerbuildanddeploy.yml

Update docker-compose.yml

1

Update dockerbuildanddeploy.yml

Update dockerbuildanddeploy.yml

test: gulp dev & prod

feat: separate dockercompose and gha

Separate GitHubActionYML for production and development
Separate DockerCompose for production and development

Test GHA

Update build-dev.yml

test

Update buildanddeploy-production.yml

Update buildanddeploy-production.yml

Update docker-compose.prod.yml

test

Update buildanddeploy-production.yml

Update buildanddeploy-production.yml

test-delete

Revert "test-delete"

This reverts commit 3249e47bb14e4c026d8cf12a88ed3922bd52a84c.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,19 +3,34 @@ name: Docker Build and Deploy
 on:
   push:
     branches:
-      - DockerFile
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: Install sshpass
         run: sudo apt-get install -y sshpass
       - name: Build Docker Image with docker-compose
-        run: docker compose -f docker-compose.yml build
+        env:
+          NODE_ENV: production
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          MY_SECRET: ${{ secrets.MY_SECRET }}
+          SENDINBLUESMTP: ${{ secrets.SENDINBLUESMTP }}
+          SENDINBLUEAPI: ${{ secrets.SENDINBLUEAPI }}
+          MONGOURI: ${{ secrets.MONGOURI_PROD }}
+          RECAPTCHA_SITE: ${{ secrets.RECAPTCHA_PROD_SITE }}
+          RECAPTCHA_SECRET: ${{ secrets.RECAPTCHA_PROD_SECRET }}
+          MONGOURI_PROD: ${{ secrets.MONGOURI_PROD }}
+          PORT: ${{ secrets.PORT }}
+          DOCKER_IMAGENAME: ${{ secrets.DOCKER_IMAGENAME }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: docker compose -f docker-compose.prod.yml build
         # Replace `/path/to/your/docker-compose.yml` with the actual path to your docker-compose.yml file.
 
       # - name: Build Docker Image
@@ -40,17 +55,17 @@ jobs:
           script: |
             echo "SSH connection established successfully."
             set -e  # Exit immediately if a command exits with a non-zero status
-            docker stop "$(docker ps -a -q)"
-            docker rm "$(docker ps -a -q)"
-            docker rmi -f "$(docker images -aq)"
-            docker rmi ${{ secrets.DOCKER_USERNAME }}/mathgenius
+
             docker pull ${{ secrets.DOCKER_USERNAME }}/mathgenius:1
 
             sudo su - ${{ secrets.DIGITALOCEAN_USER }}
+            whoami
             pm2 stop MathGenius
             exit
+            whoami
             docker run -p ${{ secrets.PORT }}:${{ secrets.PORT }} ${{ secrets.DOCKER_USERNAME }}/mathgenius:1
             sudo su - ${{ secrets.DIGITALOCEAN_USER }}
+            whoami
             pm2 restart MathGenius 
             pm2 save'
         # Replace `/path/to/your/docker-compose.yml` with the actual path to your docker-compose.yml file.
@@ -63,3 +78,6 @@ jobs:
 #   Nginx Configuration: If your nginx server is configured to proxy requests from port 4000 to your application, it will forward incoming requests to your Docker container running on port 4000.
 
 #   Request Flow: When a user sends a request to your DigitalOcean droplet on port 4000, nginx will receive the request and proxy it to your application running inside the Docker container on the same port.
+# docker stop "$(docker ps -a -q)"
+# docker rm "$(docker ps -a -q)"
+# docker rmi -f "$(docker images -aq)"
