--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: "3"
 
 services:
   web:
+    image: markhaldev/mathgenius:1
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "${PORT}:4000"
+      - "4000:4000"
     environment:
       - NODE_ENV=production
       - CLIENT_ID=${CLIENT_ID}
@@ -17,3 +18,9 @@ services:
       - MONGOURI=${MONGOURI_PROD}
       - RECAPTCHA_SITE=${RECAPTCHA_PROD_SITE}
       - RECAPTCHA_SECRET=${RECAPTCHA_PROD_SECRET}
+      - MONGOURI_PROD=${MONGOURI_PROD}
+      - PORT=${PORT}
+      - DOCKER_IMAGENAME=${DOCKER_IMAGENAME}
+      - DOCKER_USERNAME=${DOCKER_USERNAME}
+      - DOCKERHUB_TOKEN=${DOCKERHUB_TOKEN}
+      - DOCKER_PASSWORD=${DOCKER_PASSWORD}
