--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,5 +8,18 @@ services:
       dockerfile: Dockerfile
     ports:
       - "4000:4000"
-    env_file:
-      - .env
+    environment:
+      CLIENT_ID: ${ secrets.CLIENT_ID }
+      CLIENT_SECRET: ${ secrets.CLIENT_SECRET }
+      MY_SECRET: ${ secrets.MY_SECRET }
+      SENDINBLUESMTP: ${ secrets.SENDINBLUESMTP }
+      SENDINBLUEAPI: ${ secrets.SENDINBLUEAPI }
+      MONGOURI: ${ secrets.MONGOURI_PROD }
+      RECAPTCHA_SITE: ${ secrets.RECAPTCHA_PROD_SITE }
+      RECAPTCHA_SECRET: ${ secrets.RECAPTCHA_PROD_SECRET }
+      MONGOURI_PROD: ${ secrets.MONGOURI_PROD }
+      PORT: ${ secrets.PORT }
+      DOCKER_IMAGENAME: ${ secrets.DOCKER_IMAGENAME }
+      DOCKER_USERNAME: ${ secrets.DOCKER_USERNAME }
+      DOCKERHUB_TOKEN: ${ secrets.DOCKERHUB_TOKEN }
+      DOCKER_PASSWORD: ${ secrets.DOCKER_PASSWORD }
