--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,17 @@ services:
       dockerfile: Dockerfile
     ports:
       - "4000:4000"
-    env_file:
-      - .env
+    environment:
+      CLIENT_ID: ${CLIENT_ID}
+      CLIENT_SECRET: ${CLIENT_SECRET}
+      MY_SECRET: ${MY_SECRET}
+      SENDINBLUESMTP: ${SENDINBLUESMTP}
+      SENDINBLUEAPI: ${SENDINBLUEAPI}
+      RECAPTCHA_SITE: ${RECAPTCHA_PROD_SITE}
+      RECAPTCHA_SECRET: ${RECAPTCHA_PROD_SECRET}
+      MONGOURI_PROD: ${MONGOURI_PROD}
+      PORT: ${PORT}
+      DOCKER_IMAGENAME: ${DOCKER_IMAGENAME}
+      DOCKER_USERNAME: ${DOCKER_USERNAME}
+      DOCKERHUB_TOKEN: ${DOCKERHUB_TOKEN}
+      DOCKER_PASSWORD: ${DOCKER_PASSWORD}
