chore: update dev yaml
chore: rename action, remove unused yaml

--- a/.github/workflows/buildandpush-development.yml
+++ b/.github/workflows/buildandpush-development.yml
@@ -3,7 +3,7 @@ name: Docker Build and Push to Hub - Development
 on:
   push:
     branches:
-      - DockerFile2
+      - development
 
 jobs:
   build:
