--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "gulp",
-    "build": "gulp",
+    "dev": "cross-env NODE_ENV=development gulp",
+    "build": "cross-env NODE_ENV=production gulp",
     "tsc": "tsc --watch"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
