--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,62 @@
-name: Build Docker Image and Run Tests
+name: Run Cypress Tests
 
 on:
   push:
     branches:
-      - test
+      - Cypress
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Build Docker Image
-        run: docker build -t markhaldev/mathgameimage:test .
-
-      - name: Run Tests in Docker Container
+      - name: Generate .env File
         run: |
-          docker run markhaldev/mathgameimage:test npm test
+          echo "NODE_ENV=production" > .env
+          echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> .env
+          echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> .env
+          echo "MY_SECRET=${{ secrets.MY_SECRET }}" >> .env
+          echo "SENDINBLUESMTP=${{ secrets.SENDINBLUESMTP }}" >> .env
+          echo "SENDINBLUEAPI=${{ secrets.SENDINBLUEAPI }}" >> .env
+          echo "MONGOURI_PROD=${{ secrets.MONGOURI_PROD }}" >> .env
+          echo "RECAPTCHA_PROD_SITE=${{ secrets.RECAPTCHA_PROD_SITE }}" >> .env
+          echo "RECAPTCHA_PROD_SECRET=${{ secrets.RECAPTCHA_PROD_SECRET }}" >> .env
+          echo "PORT=${{ secrets.PORT }}" >> .env
+          echo "DOCKER_IMAGENAME=markhaldev/mathgeniusimage:dev" >> .env
+          echo "DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}" >> .env
+          echo "DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}" >> .env
+          echo "DIGITALOCEAN_PA_TOKEN=${{ secrets.DIGITALOCEAN_PA_TOKEN }}" >> .env
+          echo "DIGITALOCEAN_IP=${{ secrets.DIGITALOCEAN_IP }}" >> .env
+          echo "DIGITALOCEAN_PASSWORD_ROOT=${{ secrets.DIGITALOCEAN_PASSWORD_ROOT }}" >> .env
+          echo "DIGITALOCEAN_PASSWORD_USER=${{ secrets.DIGITALOCEAN_PASSWORD_USER }}" >> .env
+          echo "CYPRESS_FAKE_PASSWORD=${{ secrets.CYPRESS_FAKE_PASSWORD }}" >> .env
+          echo "CYPRESS_FAKE_USERNAME=${{ secrets.CYPRESS_FAKE_USERNAME }}" >> .env
+          echo "CYPRESS_INVALID_USERNAME_LONG=${{ secrets.CYPRESS_INVALID_USERNAME_LONG }}" >> .env
+          echo "CYPRESS_INVALID_USERNAME_LONG=${{ secrets.CYPRESS_INVALID_USERNAME_LONG }}" >> .env
+          echo "CYPRESS_INVALID_EMAIL=${{ secrets.CYPRESS_INVALID_EMAIL }}" >> .env
+          echo "CYPRESS_INVALID_PASSWORD=${{ secrets.CYPRESS_INVALID_PASSWORD }}" >> .env
+          echo "CYPRESS_VALID_USERNAME=${{ secrets.CYPRESS_VALID_USERNAME }}" >> .env
+          echo "CYPRESS_VALID_EMAIL=${{ secrets.CYPRESS_VALID_EMAIL }}" >> .env
+          echo "CYPRESS_VALID_PASSWORD=${{ secrets.CYPRESS_VALID_PASSWORD }}" >> .env
+
+      - name: Install Node.js and npm
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+      - name: Install dependencies
+        run: npm install
+      - name: Build the application
+        run: npm run build
+
+      - name: Start the application
+        run: npm run start > /dev/null 2>&1 & # Run npm start in the background, redirecting output to /dev/null
+
+      - name: Wait for the application to start
+        run: sleep 10s
+
+      - name: Run Cypress tests
+        uses: cypress-io/github-action@v5
+        with:
+          browser: chrome
