--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "cross-env NODE_ENV=development gulp",
+    "cypress:run": "npx cypress run",
     "build": "cross-env NODE_ENV=production gulp",
     "tsc": "tsc --watch"
   },
