--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.23.3",
+    "babel-jest": "^29.7.0",
     "browser-sync": "^2.28.3",
     "cypress": "^13.6.4",
     "gulp": "^4.0.2",
@@ -57,8 +59,10 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
+    "jest": "^29.7.0",
     "morgan": "^1.10.0",
     "sass": "^1.37.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.2.2"
   }
 }
