--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "gulp-ejs": "^5.1.0",
+    "gulp-javascript-obfuscator": "^1.1.6",
     "gulp-rename": "^2.0.0",
     "helmet": "^6.0.1",
     "mongodb": "^5.3.0",
